--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/multer": "^1.4.7",
     "bcrypt": "^5.0.1",
+    "buffer-to-stream": "^1.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "cloudinary": "^1.27.0",
     "cookie-parser": "^1.4.5",
     "mysql2": "^2.3.0",
     "passport": "^0.4.1",
