--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-validator": "^0.13.1",
     "cloudinary": "^1.27.0",
     "cookie-parser": "^1.4.5",
+    "express-session": "^1.17.2",
     "mysql2": "^2.3.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
